/**
 * File: SportAction.java
 * Author: Leonardi Montenegro
 * Date: April 17, 2025
 * Description: Interface that requires implementation of a doThis() method for sports actions.
 */
public interface SportAction { 
	    void doThis();
}
